--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,10 @@ networks:
 
 services:
   mysql:
-    image: mysql:5.7
+    build:
+      context: ./mysql
+      dockerfile: Dockerfile
+    image: filipeapdo/mysql:latest
     container_name: mysql
     command: --innodb-use-native-aio=0
     tty: true
@@ -14,7 +17,7 @@ services:
     networks:
       - my-net
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./mysql_data:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
