--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,10 +1,9 @@
 # Dockerfile running from node/
 
-FROM node:latest
-WORKDIR /usr/src/app
+FROM node:18.16.0
 RUN apt update && \
     apt install -y wget && \
     wget -O /usr/local/bin/wait-for-it https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh && \
     chmod +x /usr/local/bin/wait-for-it
-
-EXPOSE 3000
+WORKDIR /usr/src/app
+USER node
